--- a/docker/todo-app/back-end/Dockerfile
+++ b/docker/todo-app/back-end/Dockerfile
@@ -1,1 +1,9 @@
+FROM node:14-alpine
 
+EXPOSE 3001
+
+ADD node_modules.tar.gz .
+COPY package.json .
+COPY package-lock.json .
+
+ENTRYPOINT [ "npm", "start" ]
