--- a/docker/todo-app/front-end/Dockerfile
+++ b/docker/todo-app/front-end/Dockerfile
@@ -1,1 +1,11 @@
+FROM node:14-alpine
 
+EXPOSE 3000
+
+WORKDIR /frontend
+
+ADD node_modules.tar.gz .
+COPY package.json .
+COPY package-lock.json .
+
+ENTRYPOINT [ "npm", "start" ]
